# polymarket-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: async-clients.md  calibration.md  features.md  live-trading.md  plugin-authoring.md  reports.md
scripts/: pmlab-workspace
src/pmlab/: __init__.py  config.py  logging.py
src/pmlab/backtest/: holdout_gate.py  metrics.py  rolling_origin.py
src/pmlab/cli/: main.py
src/pmlab/core/: edge.py  fees.py  market_spec.py  pnl.py  sizing.py
src/pmlab/execution/: edge_signal.py  live_broker.py  paper_broker.py  settlement.py
src/pmlab/features/: __init__.py  transforms.py
src/pmlab/markets/: async_clob_client.py  async_gamma_client.py  cache.py  clob_client.py  gamma_client.py  typed_cache.py
src/pmlab/modeling/: base.py  calibration.py  champion.py  diagnostics.py  lgbm_baseline.py  sklearn_forecaster.py
src/pmlab/plugins/: base.py  discovery.py  registry.py
src/pmlab/plugins/sports_f1/: plugin.py
src/pmlab/reports/: __init__.py  html_report.py
src/pmlab/workspace/: context.py
tests/: conftest.py  test_ci_config.py  test_cli.py  test_cli_report.py  test_config.py  test_logging.py  test_smoke.py  test_workspace.py
tests/backtest/: test_holdout_gate.py  test_metrics.py  test_rolling_origin.py
tests/core/: test_edge.py  test_fees.py  test_kelly_sizing.py  test_market_spec.py  test_pnl.py  test_sizing.py
tests/execution/: test_edge_signal.py  test_live_broker.py  test_paper_broker.py  test_settlement.py
tests/features/: test_transforms.py
tests/integration/: test_full_pipeline.py
tests/markets/: test_async_clients.py  test_cache.py  test_clob_client.py  test_gamma_client.py  test_gamma_pagination.py  test_typed_cache.py
tests/modeling/: test_base.py  test_calibration.py  test_champion.py  test_diagnostics.py  test_lgbm.py  test_sklearn_forecaster.py
tests/plugins/: test_auto_discovery.py  test_plugin_base.py  test_registry.py
tests/plugins/sports_f1/: test_sports_f1_plugin.py
tests/plugins/weather_tmax/: test_weather_tmax_plugin.py
tests/reports/: test_html_report.py
(+2 files in other folders)
