[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pmlab"
version = "0.3.0"
description = "A generic, plugin-based ML framework for Polymarket prediction markets."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Arthur Breguez", email = "arthurbreguez@gmail.com" }]
keywords = ["polymarket", "prediction-markets", "machine-learning", "trading"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "duckdb>=1.2.1",
  "httpx>=0.28.1",
  "lightgbm>=4.6.0",
  "numpy>=2.2",
  "pandas>=2.2",
  "pyarrow>=19.0",
  "pydantic>=2.10",
  "pydantic-settings>=2.8",
  "scikit-learn>=1.6",
  "typer>=0.15",
  "tenacity>=9.0",
  "orjson>=3.10",
  "rich>=13.9",
  "pytz>=2025.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.9",
  "mypy>=1.14",
  "pre-commit>=4.0",
  "pandas-stubs>=2.2",
  "types-pytz>=2025.1",
  "pytest-asyncio>=0.24",
  "pytest-github-actions-annotate-failures>=0.2",
  "pyyaml>=6.0",
]

[project.scripts]
pmlab = "pmlab.cli.main:app"

[project.urls]
Homepage = "https://github.com/ArtBreguez/polymarket-lab"
Repository = "https://github.com/ArtBreguez/polymarket-lab"
Issues = "https://github.com/ArtBreguez/polymarket-lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pmlab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pmlab"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
]
